# FastApi-Social-Media-App

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: database.py  main.py  models.py  pyproject.toml  schemas.py
app/db/: base.py
app/models/: post.py  user.py
app/routers/: post.py  user.py
app/schemas/: post.py  user.py
docs/: app_diagrams.py
