[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11.3"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
sqlalchemy-utils = "^0.41.1"
python-dotenv = "^1.0.0"
diagrams = "^0.23.3"
taskipy = "^1.12.0"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue . && isort ."
test = "pytest test -vv && coverage report -m"
post_test = "coverage html"
kill = "lsof -t -i:8000 | xargs kill -9"
run = "uvicorn main:app --reload"
